@@ -13,8 +13,8 @@ Author: Kenneth Benoit [aut, cre],
     Kohei Watanabe [ctb],
     Benjamin Lauderdale [ctb]
 Maintainer: Kenneth Benoit <kbenoit@lse.ac.uk>
-Version: 0.9.1-7
-Date: 2015-12-16
+Version: 0.9.1-8
+Date: 2016-01-01
 Description: A fast, flexible toolset for for the management, processing, and
     quantitative analysis of textual data in R.
 License: GPL-3
@@ -63,7 +63,6 @@ Collate:
     'dfm-main.R'
     'dfm-methods.R'
     'dfm-weighting.R'
-    'distance.R'
     'encoding.R'
     'kwic.R'
     'lexdiv.R'
@@ -74,6 +73,7 @@ Collate:
     'resample.R'
     'selectFeatures.R'
     'settings.R'
+    'similarity.R'
     'stopwords.R'
     'syllables.R'
     'textfile.R'
