@@ -4,6 +4,7 @@ S3method("+",corpus)
 S3method("[",corpus)
 S3method(applyDictionary,dfm)
 S3method(as.DocumentTermMatrix,dfm)
+S3method(as.matrix,similMatrix)
 S3method(as.wfm,dfm)
 S3method(changeunits,corpus)
 S3method(collocations,character)
@@ -55,6 +56,7 @@ S3method(predict,textmodel_wordscores_fitted)
 S3method(print,corpus)
 S3method(print,kwic)
 S3method(print,settings)
+S3method(print,similMatrix)
 S3method(print,textmodel_wordfish_fitted)
 S3method(print,textmodel_wordscores_fitted)
 S3method(print,textmodel_wordscores_predicted)
