@@ -1,17 +1,23 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/distance.R
+% Please edit documentation in R/similarity.R
 \docType{methods}
 \name{similarity}
+\alias{as.matrix.similMatrix}
+\alias{print.similMatrix}
 \alias{similarity}
-\alias{similarity,dfm,index-method}
+\alias{similarity,dfm-method}
 \title{compute similarities between documents and/or features}
 \usage{
-similarity(x, selection, n = 10, margin = c("features", "documents"),
-  method = "correlation", sort = TRUE, normalize = TRUE, digits = 4)
+similarity(x, selection = NULL, n = NULL, margin = c("features",
+  "documents"), method = "correlation", sorted = TRUE, normalize = FALSE)
 
-\S4method{similarity}{dfm,index}(x, selection, n = 10,
+\S4method{similarity}{dfm}(x, selection = NULL, n = NULL,
   margin = c("features", "documents"), method = "correlation",
-  sort = TRUE, normalize = TRUE, digits = 4)
+  sorted = TRUE, normalize = FALSE)
+
+\method{as.matrix}{similMatrix}(x, ...)
+
+\method{print}{similMatrix}(x, digits = 4, ...)
 }
 \arguments{
 \item{x}{a \link{dfm} object}
@@ -29,13 +35,15 @@ documents.}
 \item{method}{a valid method for computing similarity from 
 \code{\link[proxy]{pr_DB}}}
 
-\item{sort}{sort results in descending order if \code{TRUE}}
+\item{sorted}{sort results in descending order if \code{TRUE}}
 
 \item{normalize}{if \code{TRUE}, normalize the dfm by term frequency within 
 document (so that the dfm values will be relative term frequency within 
 each document)}
 
-\item{digits}{digits for rounding results}
+\item{...}{unused}
+
+\item{digits}{decimal places to display similarity values}
 }
 \value{
 a named list of the selection labels, with a sorted named vector of 
@@ -54,21 +62,24 @@ The method for computing feature similarities can be quite slow when
 }
 \examples{
 # create a dfm from inaugural addresses from Reagan onwards
-presDfm <- dfm(subset(inaugCorpus, Year>1980), ignoredFeatures=stopwords("english"),
-               stem=TRUE)
+presDfm <- dfm(subset(inaugCorpus, Year > 1980), ignoredFeatures = stopwords("english"),
+               stem = TRUE)
 
 # compute some document similarities
-similarity(presDfm, "1985-Reagan", n=5, margin="documents")
-similarity(presDfm, c("2009-Obama" , "2013-Obama"), n=5, margin="documents")
-similarity(presDfm, c("2009-Obama" , "2013-Obama"), n=NULL, margin="documents")
-similarity(presDfm, c("2009-Obama" , "2013-Obama"), n=NULL, margin="documents", method="cosine")
-similarity(presDfm, "2005-Bush", n=NULL, margin="documents", method="eJaccard", sort=FALSE)
+(tmp <- similarity(presDfm, margin = "documents"))
+# output as a matrix
+as.matrix(tmp)
+# for specific comparisons
+similarity(presDfm, "1985-Reagan", n = 5, margin = "documents")
+similarity(presDfm, c("2009-Obama" , "2013-Obama"), n = 5, margin = "documents")
+similarity(presDfm, c("2009-Obama" , "2013-Obama"), margin = "documents")
+similarity(presDfm, c("2009-Obama" , "2013-Obama"), margin = "documents", method = "cosine")
+similarity(presDfm, "2005-Bush", margin = "documents", method = "eJaccard", sorted = FALSE)
 
 # compute some term similarities
 similarity(presDfm, c("fair", "health", "terror"), method="cosine")
 
 \dontrun{
-
 # compare to tm
 require(tm)
 data("crude")
@@ -79,8 +90,11 @@ crude <- tm_map(crude, stemDocument)
 tdm <- TermDocumentMatrix(crude)
 findAssocs(tdm, c("oil", "opec", "xyz"), c(0.75, 0.82, 0.1))
 # in quanteda
-crudeDfm <- dfm(corpus(crude))
-similarity(crudeDfm, c("oil", "opec", "xyz"), normalize=FALSE, digits=2)
+quantedaDfm <- new("dfmSparse", Matrix(t(as.matrix(tdm))))
+similarity(quantedaDfm, c("oil", "opec", "xyz"), n = 14)
+corMat <- as.matrix(proxy::simil(as.matrix(quantedaDfm), by_rows = FALSE))
+round(head(sort(corMat[, "oil"], decreasing = TRUE), 14), 2)
+round(head(sort(corMat[, "opec"], decreasing = TRUE), 9), 2)
 }
 }
 
